--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="hasil">Hasil</string>
     <string name="recalculate">recalculate</string>
     <string name="standar_bmis">Standar BMI</string>
+    <string name="kg_contoh_50">Kg (Contoh : 50)</string>
+    <string name="meter_contoh_1_6">Meter (Contoh : 1.6 )</string>
 </resources>
